--- a/record.html
+++ b/record.html
@@ -1,71 +1,61 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Workout 記錄</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
-    table { border-collapse: collapse; width: 100%; }
+    h1 { text-align: center; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
     th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background-color: #f5f5f5; }
+    th { background-color: #f0f0f0; }
   </style>
 </head>
 <body>
-  <h1>Workout 記錄</h1>
+  <h1>🏋️‍♀️ Workout 記錄</h1>
+
   <table id="dataTable">
     <thead>
       <tr>
         <th>日期</th>
-        <th>跑步 (分鐘)</th>
-        <th>重量訓練 (組)</th>
-        <th>壁球 (分鐘)</th>
-        <th>指定練習 (組)</th>
-        <th>健行 (分鐘)</th>
-        <th>瑜伽 (次數)</th>
+        <th>跑步 (min)</th>
+        <th>重量訓練 (sets)</th>
+        <th>壁球 (min)</th>
+        <th>指定練習 (sets)</th>
+        <th>健行 (min)</th>
+        <th>瑜伽 (sessions)</th>
       </tr>
     </thead>
-    <tbody>
-      <!-- 資料將插入這裡 -->
-    </tbody>
+    <tbody></tbody>
   </table>
 
   <script>
-    // 這邊請填入你的試算表 ID 和 Sheet 名稱
-    const SHEET_ID = '1LFtkrReXYpFL1W51QZkRf7Az4ZMfxB1eBu2a3YQ0hzY';
-    const SHEET_NAME = 'sheet1';
-
-    // 構建 URL：使用 Google 的 “gviz/tq” 接口取得 JSON
+    const SHEET_ID = "1LFtkrReXYpFL1W51QZkRf7Az4ZMfxB1eBu2a3YQ0hzY";
+    const SHEET_NAME = "sheet1";
     const url = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?sheet=${encodeURIComponent(SHEET_NAME)}&tqx=out:json`;
-    
+
     fetch(url)
-      .then(response => response.text())
+      .then(res => res.text())
       .then(text => {
-        // 回傳的內容有前後一些額外文字，要處理一下
-        const json = JSON.parse(text.substring(47, text.length-2));
+        // gviz 介面前後會多出非 JSON 的文字，要裁切掉
+        const json = JSON.parse(text.substring(47, text.length - 2));
         const rows = json.table.rows;
-        const tbody = document.getElementById('dataTable').querySelector('tbody');
-        
-        rows.forEach(r => {
-          const cells = r.c;
-          const tr = document.createElement('tr');
-          // 假設每列皆有 7 欄
-          cells.forEach(c => {
-            const td = document.createElement('td');
-            td.textContent = c && c.v !== null ? c.v : '';
+        const tbody = document.querySelector("#dataTable tbody");
+
+        rows.forEach(row => {
+          const tr = document.createElement("tr");
+          row.c.forEach(cell => {
+            const td = document.createElement("td");
+            td.textContent = cell ? cell.v : "";
             tr.appendChild(td);
           });
           tbody.appendChild(tr);
         });
       })
       .catch(err => {
-        console.error('取得試算表資料錯誤：', err);
-        const tbody = document.getElementById('dataTable').querySelector('tbody');
-        const tr = document.createElement('tr');
-        const td = document.createElement('td');
-        td.colSpan = 7;
-        td.textContent = '無法讀取資料';
-        tr.appendChild(td);
-        tbody.appendChild(tr);
+        console.error("讀取錯誤：", err);
+        document.querySelector("#dataTable tbody").innerHTML =
+          "<tr><td colspan='7'>無法讀取資料</td></tr>";
       });
   </script>
 </body>
