--- a/record.html
+++ b/record.html
@@ -32,7 +32,7 @@
   <script>
     const SHEET_ID = "1LFtkrReXYpFL1W51QZkRf7Az4ZMfxB1eBu2a3YQ0hzY";
     const SHEET_NAME = "sheet1";
-    const url = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?sheet=${encodeURIComponent(SHEET_NAME)}&tqx=out:json`;
+    const url = `https://docs.google.com/spreadsheets/d/${1LFtkrReXYpFL1W51QZkRf7Az4ZMfxB1eBu2a3YQ0hzY}/gviz/tq?sheet=${encodeURIComponent(sheet1)}&tqx=out:json`;
 
     fetch(url)
       .then(res => res.text())
