--- a/record.html
+++ b/record.html
@@ -32,12 +32,11 @@
   <script>
     const SHEET_ID = "1LFtkrReXYpFL1W51QZkRf7Az4ZMfxB1eBu2a3YQ0hzY";
     const SHEET_NAME = "sheet1";
-    const url = `https://docs.google.com/spreadsheets/d/${1LFtkrReXYpFL1W51QZkRf7Az4ZMfxB1eBu2a3YQ0hzY}/gviz/tq?sheet=${encodeURIComponent(sheet1)}&tqx=out:json`;
+    const url = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?sheet=${encodeURIComponent(SHEET_NAME)}&tqx=out:json`;
 
     fetch(url)
       .then(res => res.text())
       .then(text => {
-        // gviz 介面前後會多出非 JSON 的文字，要裁切掉
         const json = JSON.parse(text.substring(47, text.length - 2));
         const rows = json.table.rows;
         const tbody = document.querySelector("#dataTable tbody");
@@ -60,3 +59,4 @@
   </script>
 </body>
 </html>
+
