--- a/record.html
+++ b/record.html
@@ -3,49 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🏋️‍♀️ Workout 記錄</title>
+  <title>🏋️‍♀️ Workout 月累積記錄</title>
 
   <style>
-    body { 
+    body {
       font-family: "Noto Sans TC", Arial, sans-serif;
       margin: 0;
       background: #fafafa;
       color: #333;
       padding: 20px;
     }
-    h1 { 
-      text-align: center; 
-      margin-bottom: 20px;
+    h1 {
+      text-align: center;
+      margin-bottom: 10px;
       font-size: 1.8rem;
     }
+    .selector {
+      text-align: center;
+      margin: 15px 0;
+    }
+    select {
+      font-size: 1rem;
+      padding: 6px 12px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
     .table-container {
-      overflow-x: auto; /* ✅ 手機可橫向滑動 */
+      overflow-x: auto;
       margin: 0 auto;
       max-width: 100%;
       background: white;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
       border-radius: 12px;
     }
-    table { 
+    table {
       border-collapse: collapse;
       width: 100%;
-      min-width: 600px; /* ✅ 避免太擠 */
+      min-width: 600px;
     }
-    th, td { 
-      border: 1px solid #ddd; 
-      padding: 8px; 
-      text-align: center; 
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: center;
       white-space: nowrap;
     }
-    th { 
-      background-color: #f2f2f2; 
+    th {
+      background-color: #f2f2f2;
       font-weight: bold;
     }
 
     .chart-container {
       width: 100%;
       max-width: 800px;
-      margin: 30px auto;
+      margin: 20px auto;
       background: #fff;
       padding: 10px;
       border-radius: 12px;
@@ -60,18 +70,24 @@
     @media (max-width: 768px) {
       h1 { font-size: 1.5rem; }
       th, td { padding: 6px; font-size: 0.9rem; }
-      .chart-container { padding: 8px; }
-    }
-
-    @media (max-width: 480px) {
-      body { padding: 10px; }
-      table { min-width: 480px; }
-      h1 { font-size: 1.3rem; }
     }
   </style>
 </head>
 <body>
-  <h1>🏋️‍♀️ Workout 記錄</h1>
+  <h1>🏋️‍♀️ Workout 月累積記錄</h1>
+
+  <div class="selector">
+    <label for="chartSelect">選擇要顯示的項目：</label>
+    <select id="chartSelect">
+      <option value="all">全部顯示</option>
+      <option value="0">跑步 (min)</option>
+      <option value="1">重量訓練 (sets)</option>
+      <option value="2">壁球 (min)</option>
+      <option value="3">教練指定作業 (sets)</option>
+      <option value="4">健行 (min)</option>
+      <option value="5">瑜伽 (sessions)</option>
+    </select>
+  </div>
 
   <div class="table-container">
     <table id="dataTable">
@@ -81,7 +97,7 @@
           <th>跑步 (min)</th>
           <th>重量訓練 (sets)</th>
           <th>壁球 (min)</th>
-          <th>指定練習 (sets)</th>
+          <th>教練指定作業 (sets)</th>
           <th>健行 (min)</th>
           <th>瑜伽 (sessions)</th>
           <th>備註</th>
@@ -91,19 +107,24 @@
     </table>
   </div>
 
-  <div class="chart-container">
-    <canvas id="runningChart"></canvas>
-  </div>
-
-  <div class="chart-container">
-    <canvas id="weightChart"></canvas>
-  </div>
+  <div id="charts"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     const SHEET_ID = "1LFtkrReXYpFL1W51QZkRf7Az4ZMfxB1eBu2a3YQ0hzY";
     const SHEET_NAME = "sheet1";
     const url = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?sheet=${encodeURIComponent(SHEET_NAME)}&tqx=out:json`;
+
+    const chartNames = [
+      "跑步 (min)",
+      "重量訓練 (sets)",
+      "壁球 (min)",
+      "教練指定作業 (sets)",
+      "健行 (min)",
+      "瑜伽 (sessions)"
+    ];
+    const colors = ["#4CAF50", "#2196F3", "#FF9800", "#9C27B0", "#795548", "#E91E63"];
+    const charts = [];
 
     fetch(url)
       .then(res => res.text())
@@ -112,14 +133,11 @@
         const rows = json.table.rows;
         const tbody = document.querySelector("#dataTable tbody");
 
-        const labels = [];
-        const runningData = [];
-        const weightData = [];
+        const monthlyData = {};
 
         rows.forEach(row => {
           const tr = document.createElement("tr");
           const validCells = row.c.filter(cell => cell && cell.v !== undefined);
-
           validCells.forEach(cell => {
             const td = document.createElement("td");
             td.textContent = cell.v ?? "";
@@ -127,77 +145,69 @@
           });
           tbody.appendChild(tr);
 
-          const date = row.c[0]?.v || "";
-          const running = Number(row.c[1]?.v || 0);
-          const weight = Number(row.c[2]?.v || 0);
+          const dateStr = row.c[0]?.v || "";
+          const values = row.c.slice(1, 7).map(c => Number(c?.v || 0));
 
-          if (date) {
-            labels.push(date);
-            runningData.push(running);
-            weightData.push(weight);
+          let dateObj;
+          try {
+            dateObj = new Date(dateStr);
+            if (isNaN(dateObj)) return;
+          } catch {
+            return;
           }
+
+          const monthKey = `${dateObj.getFullYear()}-${String(dateObj.getMonth() + 1).padStart(2, "0")}`;
+          if (!monthlyData[monthKey]) monthlyData[monthKey] = [0, 0, 0, 0, 0, 0];
+          for (let i = 0; i < 6; i++) monthlyData[monthKey][i] += values[i];
         });
 
-        // 🏃‍♂️ 跑步時間圖
-        const ctx1 = document.getElementById("runningChart").getContext("2d");
-        new Chart(ctx1, {
-          type: "line",
-          data: {
-            labels,
-            datasets: [{
-              label: "跑步時間 (分鐘)",
-              data: runningData,
-              borderColor: "#4CAF50",
-              backgroundColor: "rgba(76,175,80,0.2)",
-              borderWidth: 2,
-              tension: 0.2,
-              fill: true,
-              pointRadius: 4
-            }]
-          },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-              legend: { display: true, position: "top" },
-              title: { display: true, text: "🏃‍♂️ 跑步時間趨勢圖" }
+        const labels = Object.keys(monthlyData);
+        const dataArrays = [0,1,2,3,4,5].map(i => labels.map(m => monthlyData[m][i]));
+        const chartContainer = document.getElementById("charts");
+
+        chartNames.forEach((name, i) => {
+          const div = document.createElement("div");
+          div.className = "chart-container";
+          div.dataset.index = i;
+          const canvas = document.createElement("canvas");
+          div.appendChild(canvas);
+          chartContainer.appendChild(div);
+
+          const chart = new Chart(canvas.getContext("2d"), {
+            type: "line",
+            data: {
+              labels,
+              datasets: [{
+                label: name,
+                data: dataArrays[i],
+                borderColor: colors[i],
+                backgroundColor: colors[i] + "33",
+                borderWidth: 2,
+                tension: 0.2,
+                fill: true,
+                pointRadius: 3
+              }]
             },
-            scales: {
-              x: { title: { display: true, text: "日期" } },
-              y: { title: { display: true, text: "分鐘" }, beginAtZero: true }
+            options: {
+              responsive: true,
+              maintainAspectRatio: false,
+              plugins: {
+                title: { display: true, text: "📅 每月 " + name + " 累積" }
+              },
+              scales: {
+                x: { title: { display: true, text: "月份" } },
+                y: { beginAtZero: true }
+              }
             }
-          }
+          });
+          charts.push({ div, chart });
         });
 
-        // 💪 重量訓練圖
-        const ctx2 = document.getElementById("weightChart").getContext("2d");
-        new Chart(ctx2, {
-          type: "line",
-          data: {
-            labels,
-            datasets: [{
-              label: "重量訓練 (sets)",
-              data: weightData,
-              borderColor: "#2196F3",
-              backgroundColor: "rgba(33,150,243,0.2)",
-              borderWidth: 2,
-              tension: 0.2,
-              fill: true,
-              pointRadius: 4
-            }]
-          },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-              legend: { display: true, position: "top" },
-              title: { display: true, text: "💪 重量訓練趨勢圖" }
-            },
-            scales: {
-              x: { title: { display: true, text: "日期" } },
-              y: { title: { display: true, text: "組數" }, beginAtZero: true }
-            }
-          }
+        document.getElementById("chartSelect").addEventListener("change", e => {
+          const value = e.target.value;
+          charts.forEach(({ div }, idx) => {
+            div.style.display = (value === "all" || value == idx) ? "block" : "none";
+          });
         });
       })
       .catch(err => {
