--- a/record.html
+++ b/record.html
@@ -15,11 +15,27 @@
       text-align: center;
       margin-bottom: 10px;
     }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background-color: #f3f3f3;
+    }
     .chart-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 20px;
-      margin-top: 20px;
     }
     canvas {
       background: #fff;
@@ -30,11 +46,14 @@
     @media (max-width: 600px) {
       body { margin: 10px; }
       h1 { font-size: 20px; }
+      th, td { font-size: 12px; }
     }
   </style>
 </head>
 <body>
   <h1>🏋️‍♀️ Workout 月累積記錄</h1>
+
+  <div id="summaryTable"></div>
 
   <div class="chart-container">
     <canvas id="runningChart"></canvas>
@@ -56,7 +75,7 @@
         const json = JSON.parse(text.substring(47, text.length - 2));
         const rows = json.table.rows;
 
-        // 轉成結構化資料
+        // 轉換資料格式
         const data = rows.map(r => ({
           date: r.c[0]?.f || "",
           running: r.c[1]?.v || 0,
@@ -86,7 +105,42 @@
         const labels = Object.keys(monthly).sort();
         const sums = Object.values(monthly);
 
-        // 畫圖 function
+        // === 建立統計表格 ===
+        const table = document.createElement("table");
+        const thead = `
+          <thead>
+            <tr>
+              <th>月份</th>
+              <th>跑步 (min)</th>
+              <th>重量訓練 (sets)</th>
+              <th>壁球 (min)</th>
+              <th>教練指定作業 (sets)</th>
+              <th>健行 (min)</th>
+              <th>瑜伽 (sessions)</th>
+              <th>總活動量</th>
+            </tr>
+          </thead>
+        `;
+        const tbody = labels.map((m, i) => {
+          const d = sums[i];
+          const total = d.running + d.weight + d.squash + d.assigned + d.trail + d.yoga;
+          return `
+            <tr>
+              <td>${m}</td>
+              <td>${d.running}</td>
+              <td>${d.weight}</td>
+              <td>${d.squash}</td>
+              <td>${d.assigned}</td>
+              <td>${d.trail}</td>
+              <td>${d.yoga}</td>
+              <td><b>${total}</b></td>
+            </tr>
+          `;
+        }).join("");
+        table.innerHTML = thead + "<tbody>" + tbody + "</tbody>";
+        document.getElementById("summaryTable").appendChild(table);
+
+        // === 畫圖 function ===
         function drawChart(id, label, dataKey, color) {
           const ctx = document.getElementById(id);
           new Chart(ctx, {
@@ -105,17 +159,13 @@
             },
             options: {
               responsive: true,
-              scales: {
-                y: { beginAtZero: true }
-              },
-              plugins: {
-                legend: { display: true, position: "bottom" }
-              }
+              scales: { y: { beginAtZero: true } },
+              plugins: { legend: { display: true, position: "bottom" } }
             }
           });
         }
 
-        // 各項運動的圖表
+        // 各項運動折線圖
         drawChart("runningChart", "🏃 跑步 (min)", "running", "#ff6b6b");
         drawChart("weightChart", "💪 重量訓練 (sets)", "weight", "#4e73df");
         drawChart("squashChart", "🎾 壁球 (min)", "squash", "#36b9cc");
@@ -125,14 +175,8 @@
       })
       .catch(err => {
         console.error("讀取資料錯誤：", err);
-        alert("無法讀取 Google 試算表資料，請檢查是否發佈為公開檢視。");
+        alert("無法讀取 Google 試算表資料，請確認是否設為公開檢視。");
       });
   </script>
 </body>
 </html>
-
-
-
-
-
-
