--- a/record.html
+++ b/record.html
@@ -78,5 +78,113 @@
         // 轉換資料格式
         const data = rows.map(r => ({
           date: r.c[0]?.f || "",
-          run
+          running: r.c[1]?.v || 0,
+          weight: r.c[2]?.v || 0,
+          squash: r.c[3]?.v || 0,
+          assigned: r.c[4]?.v || 0,
+          trail: r.c[5]?.v || 0,
+          yoga: r.c[6]?.v || 0
+        }));
+
+        // 按月累積
+        const monthly = {};
+        data.forEach(item => {
+          if (!item.date) return;
+          const ym = item.date.slice(0, 7); // yyyy/mm
+          if (!monthly[ym]) {
+            monthly[ym] = { running: 0, weight: 0, squash: 0, assigned: 0, trail: 0, yoga: 0 };
+          }
+          monthly[ym].running += item.running;
+          monthly[ym].weight += item.weight;
+          monthly[ym].squash += item.squash;
+          monthly[ym].assigned += item.assigned;
+          monthly[ym].trail += item.trail;
+          monthly[ym].yoga += item.yoga;
+        });
+
+        const labels = Object.keys(monthly).sort();
+        const sums = Object.values(monthly);
+
+        // === 建立統計表格 ===
+        const table = document.createElement("table");
+        const thead = `
+          <thead>
+            <tr>
+              <th>月份</th>
+              <th>跑步 (min)</th>
+              <th>重量訓練 (sets)</th>
+              <th>壁球 (min)</th>
+              <th>教練指定作業 (sets)</th>
+              <th>健行 (min)</th>
+              <th>瑜伽 (sessions)</th>
+              <th>有氧活動時間 (min)</th>
+              <th>教練指定作業完成次數</th>
+              <th>肌力訓練次數</th>
+            </tr>
+          </thead>
+        `;
+        const tbody = labels.map((m, i) => {
+          const d = sums[i];
+          const aerobic = d.running + d.squash + d.trail;
+          const assigned = d.assigned;
+          const strength = d.weight + d.yoga;
+          return `
+            <tr>
+              <td>${m}</td>
+              <td>${d.running}</td>
+              <td>${d.weight}</td>
+              <td>${d.squash}</td>
+              <td>${d.assigned}</td>
+              <td>${d.trail}</td>
+              <td>${d.yoga}</td>
+              <td><b>${aerobic}</b></td>
+              <td><b>${assigned}</b></td>
+              <td><b>${strength}</b></td>
+            </tr>
+          `;
+        }).join("");
+        table.innerHTML = thead + "<tbody>" + tbody + "</tbody>";
+        document.getElementById("summaryTable").appendChild(table);
+
+        // === 畫圖 function ===
+        function drawChart(id, label, dataKey, color) {
+          const ctx = document.getElementById(id);
+          new Chart(ctx, {
+            type: "line",
+            data: {
+              labels,
+              datasets: [{
+                label,
+                data: sums.map(x => x[dataKey]),
+                borderColor: color,
+                fill: false,
+                tension: 0.2,
+                pointRadius: 4,
+                borderWidth: 2
+              }]
+            },
+            options: {
+              responsive: true,
+              scales: { y: { beginAtZero: true } },
+              plugins: { legend: { display: true, position: "bottom" } }
+            }
+          });
+        }
+
+        // 各項運動折線圖
+        drawChart("runningChart", "🏃 跑步 (min)", "running", "#ff6b6b");
+        drawChart("weightChart", "💪 重量訓練 (sets)", "weight", "#4e73df");
+        drawChart("squashChart", "🎾 壁球 (min)", "squash", "#36b9cc");
+        drawChart("assignedChart", "📋 教練指定作業 (sets)", "assigned", "#f6c23e");
+        drawChart("trailChart", "🚶 健行 (min)", "trail", "#1cc88a");
+        drawChart("yogaChart", "🧘‍♀️ 瑜伽 (sessions)", "yoga", "#e83e8c");
+      })
+      .catch(err => {
+        console.error("讀取資料錯誤：", err);
+        alert("無法讀取 Google 試算表資料，請確認是否設為公開檢視。");
+      });
+  </script>
+</body>
+</html>
+
 
